--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -2,6 +2,12 @@ body {
   background: #eee;
   font-family: sans-serif;
 }
+.title,
+.content,
+.button-container{
+  margin-bottom: 8px;
+  padding-left:  8px;
+}
 
 .card {
   width: 400px;
@@ -11,17 +17,26 @@ body {
 
 .title {
   background: #e3f4ff;
+  font-size: 16px;
+  padding-left: 8px;
 }
 
 .content {
   background: #e3f4ff;
+  padding-bottom: 16px;
+  padding-top: 16px;
+  padding-right: 8px;
 }
 
 .button-container {
+  text-align: center;
   background: #e3f4ff;
 }
 
 button {
+  display: block;
+  margin: 0 auto;
   background: white;
   border: 1px solid #eee;
+  padding: 8px 24px;
 }
