--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,13 +1,35 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
+  
+}
+.content {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  max-width: 200px;
+  
+  
 }
 
+.info{
+  display: flex;
+  gap: 52px;
+  justify-content: center;
+
+
+
+
+}
 img {
   width: 100px;
   height: 100px;
 }
 
+
 .title {
+  margin-bottom: 32px;
+
   font-size: 36px;
   font-weight: 900;
 }
