--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -4,6 +4,7 @@ html, body {
   height: 100%;
 }
 
+
 body {
   font-family: Roboto, sans-serif;
   margin: 0;
@@ -14,12 +15,24 @@ body {
   align-items: center;
   justify-content: center;
 }
+.header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 8px;
+}
 
 .modal {
   background: white;
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  gap: 10px;
+  padding: 16px;
+
 }
 
 .icon {
@@ -33,6 +46,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
 }
 
 .close-button {
@@ -58,7 +72,9 @@ button.continue {
   border: 1px solid royalblue;
   color: white;
 }
-
+.text{
+  margin-bottom: 16px;
+}
 button.cancel {
   background: white;
   border: 1px solid #ddd;
