--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -4,6 +4,9 @@
 }
 
 .container {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  gap:4px;
   text-align: center;
 }
 
@@ -16,25 +19,40 @@
 }
 
 .header {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-column: 1/3;
+  grid-row: 1/2;
   background-color: #393f4d;
+  justify-items: normal;
+  align-items: center;
 }
 
 .logo {
+  justify-self: center;
 }
 
 .menu {
+  align-self: center;
 }
 
 .menu ul {
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+
 }
 
 .menu ul,
 .menu li {
   font-size: 16px;
+  list-style: none;
 }
 
 .sidebar {
   background-color: #FF7755;
+  gap:50px;
+  display: grid;
+  grid-row: 2/ span 2;
 }
 
 .sidebar .photo {
@@ -60,14 +78,22 @@
 }
 
 .nav ul {
+  display:grid;
+  grid-template-columns: repeat(3,1fr);
 }
 
 .nav ul li {
   font-size: 16px;
   text-transform: uppercase;
+  list-style: none;
 }
 
 .article {
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+  grid-template-rows: repeat(2,1fr);
+  gap:4px;
+  grid-column: 2/3;
   background-color: #bccbde;
 }
 
@@ -79,6 +105,7 @@
 }
 
 .article .card {
+  height: 200px;
   background-color: #FFFFFF;
   color: black;
   text-align: center;
@@ -88,6 +115,7 @@
   color: black;
   font-weight: normal;
   font-size: 14px;
+  padding:5px;
 }
 
 .card .title {
@@ -97,6 +125,8 @@
 
 .footer {
   background-color: #393f4d;
+  grid-column-start: 1;
+  grid-column-end: 3;
 }
 
 .footer p {
